Add error details for lab setup on Day 02
Documented error encountered during lab setup related to Google Drive permissions.

--- a/daily-logs/2026-01-07-day-02.md
+++ b/daily-logs/2026-01-07-day-02.md
@@ -1,3 +1,19 @@
 # Day 02 — 2026-01-07
 Time Taken: ~1.5 - 2 hours
 > Time taken includes the time for theory, watching videos and the simple lab set up and execution.
+For me while setting up the lab, I have got the below error:
+{
+  "title": "failure.details",
+  "provider": {
+    "endpoint": "GET https://www.googleapis.com/drive/v3/about",
+    "statusCode": "403 (Forbidden)",
+    "errorMessage": "error - Insufficient Permission. Please provide the <drive scope> during oauth provisioning consent screen"
+  },
+  "uipath": {
+    "requestId": "3943735104410701774",
+    "statusCode": "Forbidden",
+    "errorMessage": "Failed to authenticate with Google Sheets during provisioning. Please check your credentials or instance configuration"
+  }
+}
+
+Screenshot:
