docs: create 2026-01-18-day-10.md
Added:
- title
- focus
- time spent
- purpose of the day

--- a/daily-logs/2026-01-18-day-10.md
+++ b/daily-logs/2026-01-18-day-10.md
@@ -1,1 +1,17 @@
+# Day 10 — 2026-01-18
 
+**Focus:** Completing Automation Starter · Agentic Automation & Prompt Discipline  
+**Time Spent:** ~3–4 hours
+
+---
+
+## 🎯 Purpose of the Day
+Day 10 marked the **formal completion phase** of the Automation Starter course.
+The intent was not speed, but to:
+
+- Understand **Agentic Automation** conceptually (not operationally)
+- Distinguish between **rule-based automation**, **specialized AI**, **generative AI**, and **agentic systems**
+- Extract **prompt-engineering principles** that transfer beyond UiPath
+- Identify risks, assumptions, and governance concerns early
+
+---
