docs: add execution notes for agentic automation and prompts
Added:
- work done
- agentic automation concepts
- governance concerns
- prompt engineering fundamentals

--- a/daily-logs/2026-01-18-day-10.md
+++ b/daily-logs/2026-01-18-day-10.md
@@ -15,3 +15,30 @@ The intent was not speed, but to:
 - Identify risks, assumptions, and governance concerns early
 
 ---
+
+## 🛠 What I Worked On
+
+### 1. Introduction to Agentic Automation
+Covered concepts and framing rather than implementation details:
+- What agentic automation is *and is not*
+- Why agentic systems do **not** start from zero
+- How agents integrate into **existing workflows**, not replace them
+- Definition of **agentic orchestration** (humans remain accountable)
+
+### 2. Concerns Around Agentic Automation
+Reviewed and reflected on:
+- Accountability (humans define boundaries and escalation)
+- Data security (inherits existing RPA security model)
+- Bias and correctness (mitigated through **context grounding**)
+- Misconception that agents operate independently without oversight
+
+### 3. Prompt Engineering Fundamentals
+Studied structured prompt design, including:
+- Specificity vs vagueness
+- Providing explicit context
+- Defining tone, audience, and depth
+- Using step-by-step instructions
+- Specifying output format
+- Assigning a role or point of view
+
+---
