docs: add platform theory notes for RPA Developer Foundation
Added:
- automation definition
- Automation Explorer intent
- Studio–Robot–Orchestrator model
- prerequisites and assumptions

--- a/daily-logs/2026-01-19-day-11.md
+++ b/daily-logs/2026-01-19-day-11.md
@@ -24,3 +24,65 @@ The intent today was **not hands-on automation**, but to:
 
 ---
 
+## 🛠 What I Covered (Theory Only)
+
+### 1. Automation as a Discipline
+- Automation is an umbrella term covering:
+  - Robotic Process Automation (RPA)
+  - API automation
+  - Test automation
+  - Artificial Intelligence (AI)
+- Core definition:
+  > If activities inside a machine occur without human intervention, it is automation.
+
+---
+
+### 2. Purpose of the Automation Explorer Path
+- Designed for:
+  - Beginners entering automation
+  - Learners evaluating UiPath as a career path
+- Focuses on **foundational understanding**, not production readiness
+- Explicitly allows learners to stop after Explorer without penalty
+
+---
+
+### 3. UiPath Core Platform Components
+High-level understanding of how the system works:
+
+- **Studio**  
+  Designs and builds automation workflows
+
+- **Robot + Assistant**  
+  Executes automations (attended / unattended)
+
+- **Orchestrator**  
+  Centralized control for:
+  - Publishing processes
+  - Managing robots and licenses
+  - Running jobs
+  - Monitoring execution
+
+Key insight:
+> Automation in UiPath is a **distributed system**, not a single tool.
+
+---
+
+### 4. Prerequisites & Environment Assumptions
+- Requires an **Automation Cloud account** for:
+  - Installing Studio, Robot, Assistant
+  - License provisioning
+  - Job execution
+- Version notes:
+  - Course originally built on Studio 2022.10
+  - Content aligned to 2024.10
+  - Visual differences exist, core concepts unchanged
+
+---
+
+### 5. Learning Discipline Emphasized
+- Watch theory fully before execution
+- Use forums for clarification, not shortcuts
+- Treat documentation and release notes as authoritative sources
+
+---
+
