docs: add purpose and course context for Day 12

--- a/daily-logs/2026-01-20-day-12.md
+++ b/daily-logs/2026-01-20-day-12.md
@@ -4,3 +4,20 @@
 **Time Spent:** ~2–2.5 hours
 
 ---
+
+## 🎯 Purpose of the Day
+Day 12 marked the **first guided execution phase** of the RPA Developer Foundation path.
+
+The intent today was:
+- To understand the **UiPath Studio interface**
+- To translate a **business scenario** into automation steps
+- To observe how UiPath structures workflows before writing logic
+- To proceed slowly and avoid blind execution
+
+---
+
+## 📘 Course Context
+- **Learning Plan:** RPA Developer Foundation (v2021.10)
+- **Module:** Build Your First Process with Studio
+- **Nature of Work:** Guided walkthrough (partial execution)
+- **Execution Status:** Studio exploration + workflow understanding
