docs: add execution observations for Build Your First Process

--- a/daily-logs/2026-01-20-day-12.md
+++ b/daily-logs/2026-01-20-day-12.md
@@ -21,3 +21,36 @@ The intent today was:
 - **Module:** Build Your First Process with Studio
 - **Nature of Work:** Guided walkthrough (partial execution)
 - **Execution Status:** Studio exploration + workflow understanding
+
+---
+
+## 🛠 What I Did
+
+### 1. Explored UiPath Studio Interface
+- Identified key panels:
+  - Activities
+  - Designer
+  - Properties
+  - Output
+- Observed that Studio enforces **visual structure before logic**
+
+---
+
+### 2. Reviewed the Business Scenario (ACME System 1)
+- Understood the automation goal at a **process level**, not task level
+- Identified inputs:
+  - Emails
+  - Attachments
+  - Excel files
+- Identified outputs:
+  - Updated Excel
+  - Draft email
+
+---
+
+### 3. Observed Workflow Construction Pattern
+- UiPath promotes:
+  - Sequential clarity
+  - Explicit data flow
+  - Separation of concerns
+- Workflow design is guided, not free-form
