docs: add observations, constraints, and outcome for Day 12

--- a/daily-logs/2026-01-20-day-12.md
+++ b/daily-logs/2026-01-20-day-12.md
@@ -54,3 +54,32 @@ The intent today was:
   - Explicit data flow
   - Separation of concerns
 - Workflow design is guided, not free-form
+
+---
+
+## 🧠 Key Observations
+- UiPath Studio enforces structure early to reduce runtime ambiguity
+- Business understanding precedes activity selection
+- The course assumes familiarity with:
+  - Email systems
+  - Excel concepts
+  - Basic UI interaction
+
+---
+
+## ⚠️ Constraints & Assumptions
+- Course assumes:
+  - Outlook availability
+  - ACME System accessibility
+- Does not clearly warn about:
+  - Non-Outlook email setups
+  - Enterprise environment differences
+- These assumptions will require validation during labs
+
+---
+
+## 📌 Outcome
+- Studio interface mental model established
+- Business-to-automation mapping understood
+- No premature claims of completion
+- Ready for controlled, step-by-step workflow building
