docs: add execution attempt and blocker for Day 13
Added:
- Attempted execution steps
- What blocked the steps

--- a/daily-logs/2026-01-21-day-13.md
+++ b/daily-logs/2026-01-21-day-13.md
@@ -24,3 +24,34 @@ The objective was to:
 - **Execution Status:** Publish a process to Orchestrator and run it via UiPath Assistant
 
 ---
+
+## 🛠 What I Attempted
+Following the official course video, I attempted to:
+1. Create / access a UiPath Automation Cloud account
+2. Navigate to **Orchestrator** → **Tenant** → **Manage Access**
+3. Assign execution permissions to a newly invited user
+4. Proceed toward publishing and running a first process
+
+Execution halted at Step 3.
+---
+
+## 🚨 Execution Blocker Identified — Platform Drift
+
+### What the Course Video Demonstrates
+- Assigning the deprecated Robot role
+- Role assignment path:
+  ```
+  Orchestrator → Tenant → Manage Access → Assign roles → Robot
+  ```
+- Robot role providing both tenant-level and folder-level permissions
+
+---
+
+
+## What the Current Platform Enforces (Observed)
+- Robot role is no longer available for new tenants
+- Access control is now split into:
+- Automation User at the tenant level
+- Automation User at the folder level
+- The UI no longer exposes the assignment flow shown in the video
+- This mismatch causes the learner to reach a dead-end when following the video literally.
