docs: add observations, constraints, and outcome for Day 13
Added:
- Key observations
- Constraints and assumptions
- Execution outcome
- AI assistance disclosure
- Evidence

--- a/daily-logs/2026-01-21-day-13.md
+++ b/daily-logs/2026-01-21-day-13.md
@@ -55,3 +55,65 @@ Execution halted at Step 3.
 - Automation User at the folder level
 - The UI no longer exposes the assignment flow shown in the video
 - This mismatch causes the learner to reach a dead-end when following the video literally.
+
+---
+
+
+## 🔎 Evidence Captured
+- Screenshot:
+  - assets/day-13/orchestrator-manage-access-roles.png
+- UI state confirms:
+  - No Robot role present
+- No equivalent “Assign Robot” action
+- Course acknowledgment of deprecation appears after demonstrating the obsolete flow
+
+---
+
+
+## 🧠 Key Observations
+- This is not a configuration or user error
+- The issue is documentation sequencing, not missing permissions
+- New learners are expected to reinterpret role assignment without guidance
+- Stopping execution early prevented incorrect role or permission creation
+
+---
+
+
+## ⚠️ Constraints & Assumptions
+
+- Course assumes:
+  - Legacy Robot role availability
+- Older Orchestrator access model
+- Platform reality:
+  - New Automation Cloud tenants use a revised RBAC model
+- Course material has not been fully updated to reflect this
+- No official step-by-step mapping is provided for the new model in this lesson
+
+---
+
+
+### 📌 Outcome
+
+- Execution intentionally paused to avoid misconfiguration
+- Platform drift documented with evidence
+- Clear documentation gap identified for future reference
+- Ready to resume execution only after clarifying:
+- Correct tenant-level permission
+- Correct folder-level permission
+- Modern replacement for deprecated Robot role
+
+--- 
+
+## 🤖 AI Assistance Disclosure
+
+AI tools were used only to improve writing clarity and structure.
+All observations, decisions, screenshots, and execution attempts were performed and verified by me.
+
+
+---
+
+
+## 🧾 Evidence Index
+- Screenshot: assets/day-13/orchestrator-manage-access-roles.png
+- Related lesson: Explore automation development with UiPath (v2024.10)
+- Prior context: Week 01–02 integration-boundary documentation patterns
