docs: add publishing and design documentation notes
Added notes covering:
- Publishing automation projects
- Project types and publish targets
- Designing automations across Windows and cross-platform projects
- Key differences between Studio Web and Studio Desktop

--- a/daily-logs/2026-01-23-day-15.md
+++ b/daily-logs/2026-01-23-day-15.md
@@ -18,3 +18,153 @@ Instead of attempting execution, I intentionally paused to:
 - Reduce future trial-and-error during labs
 
 ---
+
+## 📘 Sources Studied (Official Docs)
+
+### 1. About Publishing Automation Projects  
+- UiPath Studio User Guide (Release 2024.10)  
+- Last updated: Jan 19, 2026
+
+Key areas reviewed:
+- What “publishing” actually means (archiving into a package)
+- Where projects can be published:
+  - Orchestrator (Tenant / Personal Workspace)
+  - Assistant (Robot Defaults)
+  - Local / Custom NuGet feeds
+- Differences between:
+  - Processes
+  - Libraries
+  - UI Libraries
+  - Templates
+  - Test cases
+- Versioning, tags, release notes, and icons
+- Command-line publishing (`UiPath.Studio.CommandLine.exe`)
+- Why **published packages must never be manually unpacked**
+
+---
+
+### 2. Designing Automations  
+- UiPath Studio User Guide — Designing Automations (2024.10)
+
+Key concepts clarified:
+- Difference between:
+  - **Windows projects**
+  - **Cross-platform projects**
+  - **Windows-Legacy projects**
+- Editors and builders:
+  - Expression Editor
+  - Text Builder
+  - Condition Builder
+  - Collection / Dictionary Builders
+- Auto-generated outputs and variables
+- Use of **Autopilot™ for expression generation**
+- Trigger-based automations:
+  - Manual
+  - Time-based
+  - Event-based (unattended robots only)
+- Why some activities behave differently depending on compatibility mode
+
+---
+
+## 🧠 Key Clarifications Gained
+
+- Publishing is **not execution** — it is packaging + distribution
+- Orchestrator is the **control plane**, not a build tool
+- Studio Web and Studio Desktop have **overlapping but not identical capabilities**
+- Many course videos reference:
+  - Deprecated roles (e.g., Robot role)
+  - Older Orchestrator UI
+- New tenants use **Automation User roles**, which changes the lab flow
+- Designing automations depends heavily on:
+  - Project compatibility
+  - Activity type
+  - Execution target (attended vs unattended)
+
+---
+
+## ⚠️ Current Friction / Confusion Areas
+
+- Lab videos demonstrate **old role assignment flows**
+- New Orchestrator UI makes role and license mapping non-obvious
+- Studio Web vs Studio Desktop expectations are not clearly separated
+- Beginners are expected to “infer” differences that are not documented inline
+
+This explains earlier confusion during the “Run your first process” lab.
+
+---
+
+## 📘 Sources Studied (Official Docs)
+
+### 1. About Publishing Automation Projects  
+- UiPath Studio User Guide (Release 2024.10)  
+- Last updated: Jan 19, 2026
+
+Key areas reviewed:
+- What “publishing” actually means (archiving into a package)
+- Where projects can be published:
+  - Orchestrator (Tenant / Personal Workspace)
+  - Assistant (Robot Defaults)
+  - Local / Custom NuGet feeds
+- Differences between:
+  - Processes
+  - Libraries
+  - UI Libraries
+  - Templates
+  - Test cases
+- Versioning, tags, release notes, and icons
+- Command-line publishing (`UiPath.Studio.CommandLine.exe`)
+- Why **published packages must never be manually unpacked**
+
+---
+
+### 2. Designing Automations  
+- UiPath Studio User Guide — Designing Automations (2024.10)
+
+Key concepts clarified:
+- Difference between:
+  - **Windows projects**
+  - **Cross-platform projects**
+  - **Windows-Legacy projects**
+- Editors and builders:
+  - Expression Editor
+  - Text Builder
+  - Condition Builder
+  - Collection / Dictionary Builders
+- Auto-generated outputs and variables
+- Use of **Autopilot™ for expression generation**
+- Trigger-based automations:
+  - Manual
+  - Time-based
+  - Event-based (unattended robots only)
+- Why some activities behave differently depending on compatibility mode
+
+---
+
+## 🧠 Key Clarifications Gained
+
+- Publishing is **not execution** — it is packaging + distribution
+- Orchestrator is the **control plane**, not a build tool
+- Studio Web and Studio Desktop have **overlapping but not identical capabilities**
+- Many course videos reference:
+  - Deprecated roles (e.g., Robot role)
+  - Older Orchestrator UI
+- New tenants use **Automation User roles**, which changes the lab flow
+- Designing automations depends heavily on:
+  - Project compatibility
+  - Activity type
+  - Execution target (attended vs unattended)
+
+---
+
+## ⚠️ Current Friction / Confusion Areas
+
+- Lab videos demonstrate **old role assignment flows**
+- New Orchestrator UI makes role and license mapping non-obvious
+- Studio Web vs Studio Desktop expectations are not clearly separated
+- Beginners are expected to “infer” differences that are not documented inline
+
+This explains earlier confusion during the “Run your first process” lab.
+
+---
+
+
