docs: fix Day 15 log duplication and date alignment
- Removed duplicated sections
- Corrected day numbering to match Jan 23, 2026 (Day 15)
- Consolidated sources, observations, and outcomes

--- a/daily-logs/2026-01-23-day-15.md
+++ b/daily-logs/2026-01-23-day-15.md
@@ -1,4 +1,4 @@
-# Day 13 — 2026-01-23
+# Day 15 — 2026-01-23
 
 **Focus:** Clearing Platform Confusion — Publishing & Designing Automations  
 **Time Spent:** ~2–2.5 hours (reading + conceptual alignment)
@@ -7,30 +7,30 @@
 
 ## 🎯 Purpose of the Day
 
-Today was focused on **resolving confusion caused by mismatches between course videos and current UiPath documentation**.
+Today focused on **resolving confusion caused by mismatches between course videos and current UiPath documentation**.
 
 Instead of attempting execution, I intentionally paused to:
 - Read **official UiPath documentation**
-- Reconcile differences between **old lab videos** and **current platform behavior**
+- Reconcile differences between **older lab videos** and **current platform behavior**
 - Build a correct mental model for:
   - Publishing automation projects
-  - Designing automations across Windows / Cross-platform projects
+  - Designing automations across Windows and cross-platform projects
 - Reduce future trial-and-error during labs
 
 ---
 
 ## 📘 Sources Studied (Official Docs)
 
-### 1. About Publishing Automation Projects  
+### 1. About Publishing Automation Projects
 - UiPath Studio User Guide (Release 2024.10)  
 - Last updated: Jan 19, 2026
 
 Key areas reviewed:
-- What “publishing” actually means (archiving into a package)
+- What “publishing” actually means (archiving a project into a package)
 - Where projects can be published:
   - Orchestrator (Tenant / Personal Workspace)
   - Assistant (Robot Defaults)
-  - Local / Custom NuGet feeds
+  - Local or custom NuGet feeds
 - Differences between:
   - Processes
   - Libraries
@@ -43,85 +43,11 @@ Key areas reviewed:
 
 ---
 
-### 2. Designing Automations  
+### 2. Designing Automations
 - UiPath Studio User Guide — Designing Automations (2024.10)
 
 Key concepts clarified:
-- Difference between:
-  - **Windows projects**
-  - **Cross-platform projects**
-  - **Windows-Legacy projects**
-- Editors and builders:
-  - Expression Editor
-  - Text Builder
-  - Condition Builder
-  - Collection / Dictionary Builders
-- Auto-generated outputs and variables
-- Use of **Autopilot™ for expression generation**
-- Trigger-based automations:
-  - Manual
-  - Time-based
-  - Event-based (unattended robots only)
-- Why some activities behave differently depending on compatibility mode
-
----
-
-## 🧠 Key Clarifications Gained
-
-- Publishing is **not execution** — it is packaging + distribution
-- Orchestrator is the **control plane**, not a build tool
-- Studio Web and Studio Desktop have **overlapping but not identical capabilities**
-- Many course videos reference:
-  - Deprecated roles (e.g., Robot role)
-  - Older Orchestrator UI
-- New tenants use **Automation User roles**, which changes the lab flow
-- Designing automations depends heavily on:
-  - Project compatibility
-  - Activity type
-  - Execution target (attended vs unattended)
-
----
-
-## ⚠️ Current Friction / Confusion Areas
-
-- Lab videos demonstrate **old role assignment flows**
-- New Orchestrator UI makes role and license mapping non-obvious
-- Studio Web vs Studio Desktop expectations are not clearly separated
-- Beginners are expected to “infer” differences that are not documented inline
-
-This explains earlier confusion during the “Run your first process” lab.
-
----
-
-## 📘 Sources Studied (Official Docs)
-
-### 1. About Publishing Automation Projects  
-- UiPath Studio User Guide (Release 2024.10)  
-- Last updated: Jan 19, 2026
-
-Key areas reviewed:
-- What “publishing” actually means (archiving into a package)
-- Where projects can be published:
-  - Orchestrator (Tenant / Personal Workspace)
-  - Assistant (Robot Defaults)
-  - Local / Custom NuGet feeds
 - Differences between:
-  - Processes
-  - Libraries
-  - UI Libraries
-  - Templates
-  - Test cases
-- Versioning, tags, release notes, and icons
-- Command-line publishing (`UiPath.Studio.CommandLine.exe`)
-- Why **published packages must never be manually unpacked**
-
----
-
-### 2. Designing Automations  
-- UiPath Studio User Guide — Designing Automations (2024.10)
-
-Key concepts clarified:
-- Difference between:
   - **Windows projects**
   - **Cross-platform projects**
   - **Windows-Legacy projects**
@@ -129,27 +55,28 @@ Key concepts clarified:
   - Expression Editor
   - Text Builder
   - Condition Builder
-  - Collection / Dictionary Builders
+  - Collection Builder
+  - Dictionary Builder
 - Auto-generated outputs and variables
-- Use of **Autopilot™ for expression generation**
+- Use of **Autopilot™** for expression generation
 - Trigger-based automations:
-  - Manual
-  - Time-based
-  - Event-based (unattended robots only)
-- Why some activities behave differently depending on compatibility mode
+  - Manual triggers
+  - Time-based triggers
+  - Event-based triggers (unattended robots only)
+- Why activity behavior changes based on project compatibility
 
 ---
 
 ## 🧠 Key Clarifications Gained
 
-- Publishing is **not execution** — it is packaging + distribution
-- Orchestrator is the **control plane**, not a build tool
-- Studio Web and Studio Desktop have **overlapping but not identical capabilities**
+- Publishing is **not execution** — it is packaging and distribution
+- Orchestrator acts as a **control plane**, not a build tool
+- Studio Web and Studio Desktop overlap, but are **not equivalent**
 - Many course videos reference:
   - Deprecated roles (e.g., Robot role)
-  - Older Orchestrator UI
-- New tenants use **Automation User roles**, which changes the lab flow
-- Designing automations depends heavily on:
+  - Older Orchestrator UI flows
+- New tenants use **Automation User–based role models**
+- Automation design is highly dependent on:
   - Project compatibility
   - Activity type
   - Execution target (attended vs unattended)
@@ -158,15 +85,14 @@ Key concepts clarified:
 
 ## ⚠️ Current Friction / Confusion Areas
 
-- Lab videos demonstrate **old role assignment flows**
-- New Orchestrator UI makes role and license mapping non-obvious
+- Lab videos demonstrate **legacy role assignment flows**
+- New Orchestrator UI makes license + role mapping non-obvious
 - Studio Web vs Studio Desktop expectations are not clearly separated
-- Beginners are expected to “infer” differences that are not documented inline
+- Beginners are expected to infer platform differences without explicit guidance
 
-This explains earlier confusion during the “Run your first process” lab.
+This explains earlier confusion during the **“Run your first process”** lab.
 
 ---
-
 
 ## 📌 Outcome
 
@@ -174,11 +100,10 @@ This explains earlier confusion during the “Run your first process” lab.
 - No false execution attempted
 - Ready to:
   - Re-attempt execution with correct expectations
-  - Capture **screenshots of the new Orchestrator UI**
-  - Document gaps between video labs and current platform
+  - Capture screenshots of the **new Orchestrator UI**
+  - Document gaps between video labs and current platform behavior
 
 ---
-
 
 ## 🤖 AI Assistance Disclosure
 
