docs: add Day 17 theory log for Build Your First Process (part 1–2)
Documented theory-first preparation for the Build Your First Process module,
including studio interface understanding, business-first automation thinking,
and execution constraints.

--- a/daily-logs/2026-01-25-day-17.md
+++ b/daily-logs/2026-01-25-day-17.md
@@ -1,1 +1,94 @@
+# Day 17 — 2026-01-25
+
+**Focus:** RPA Developer Foundation — Build Your First Process (Theory: Part 1–2)  
+**Time Spent:** ~2–2.5 hours (theory only)
+
+---
+
+## 🎯 Purpose of the Day
+
+Today was dedicated to **theory-first preparation** for the
+**“Build Your First Process with Studio”** module.
+
+The intent was to:
+- Understand the **business scenario and expectations**
+- Learn the **Studio interface** before execution
+- Avoid blind clicking during labs
+- Align mental model with **current UiPath platform behavior**
+
+No execution was attempted by design.
+
+---
+
+## 📘 Course Context
+
+- **Learning Plan:** RPA Developer Foundation (v2021.10)
+- **Module:** Build Your First Process with Studio
+- **Progress:** Theory covered up to Part 2
+- **Execution Status:** Not started (blocked by knowledge check)
+
+---
+
+## 🛠 What I Covered (Theory Only)
+
+### 1. Course Structure & Expectations
+- End-to-end walkthrough of a business-driven automation
+- Focus on:
+  - Understanding requirements
+  - Translating them into workflow steps
+  - Publishing and running via Orchestrator + Assistant
+
+---
+
+### 2. UiPath Studio Interface (Conceptual)
+- Purpose of:
+  - Designer panel
+  - Activities panel
+  - Properties panel
+  - Output and debugging areas
+- Studio is the **authoring tool**, not the execution engine
+
+---
+
+### 3. Business-First Automation Thinking
+- Automation is derived from:
+  - Business needs
+  - Process steps
+  - Data flow
+- Not from activities or UI clicks alone
+
+---
+
+## 🧠 Key Observations
+
+- The course assumes:
+  - Prior platform clarity (Studio–Robot–Orchestrator)
+  - Automation Cloud availability
+- Execution steps depend heavily on:
+  - Correct role assignments
+  - Updated Orchestrator UI
+- Older lab videos do not fully reflect the current experience
+
+---
+
+## ⚠️ Constraints & Assumptions
+
+- Knowledge check must be passed before execution
+- Lab videos reference older role models
+- Studio Web vs Studio Desktop differences are not emphasized inline
+
+---
+
+## 📌 Outcome
+
+- Correct expectations established
+- No premature execution attempted
+- Reduced risk of repeat confusion seen in earlier labs
+
+---
+
+## 🤖 AI Assistance Disclosure
+
+AI tools were used only for writing clarity.
+All reading, interpretation, and technical judgment are my own.
 
